--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,6 +159,8 @@ coverage = []
 
 [profile.dev]
 split-debuginfo = "unpacked"
+[profile.release]
+debug = true
 
 [[bench]]
 name = "static_and_dynamic_functions"
