--- a/deny.toml
+++ b/deny.toml
@@ -179,6 +179,7 @@ skip = [
     { name = "semver-parser", version = "=0.7.0" },
     { name = "rustc_version", version = "=0.2.3" },
     { name = "itoa", version = "=0.4.8" },
+    { name = "object", version = "=0.27.1" },
 ]
 # Similarly to `skip` allows you to skip certain crates during duplicate 
 # detection. Unlike skip, it also includes the entire tree of transitive 
