Update object crate to include fix for Windows dylib support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -295,4 +295,4 @@ path = "examples/features.rs"
 required-features = ["cranelift"]
 
 [patch.crates-io]
-object = { git = "https://github.com/Amanieu/object", branch = "arm64_macho_write" }
+object = { git = "https://github.com/Amanieu/object", branch = "wasmer" }
