Use custom fork of object until required features are merged

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -294,3 +294,6 @@ required-features = ["cranelift"]
 name = "features"
 path = "examples/features.rs"
 required-features = ["cranelift"]
+
+[patch.crates-io]
+object = { git = "https://github.com/Amanieu/object", branch = "wasmer" }
